--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
     <title>iOS OTA</title>
   </head>
   <body>
-    <p><a href="itms-services://?action=download-manifest&url=https://s3.amazonaws.com/com.virtualtradefair.installer/iOS/manifest.plist">Click here ;-)</a></p>
+    <p><a href="itms-services://?action=download-manifest&url=https://s3.amazonaws.com/com.virtualtradefair.installer/iOS/manifest.plist">Virtual Trade Fair (Download)</a></p>
   </body>
 </html>
